_sass/hero.scss
#hero {
	position: sticky;
	top: 0;
	z-index: 1;
	display: flex;
	padding: 3rem 1rem;
	align-items: center;
	justify-content: center;
	flex-flow: column;
	text-align: center;

	& > h1 {
		font-size: 6.25rem;
		line-height: 1.2em;
		color: #fff;
		border: 0;
		
		@media (orientation: portrait) {
			font-size: 2.5rem;
		}
		
		& > a {
			&:not(:hover, :focus) {
				text-decoration: none;
			}
		}
	}
	& > h2 {
		font-size: 3.5rem;
		line-height: 1.2em;
		color: #fff;
		border: 0;

		@media (orientation: portrait) {
			font-size: 2rem;
		}
	}
	& > h3 {
		color: #fff;
		margin-bottom: 1em;
		
		& > a {
			display: inline-block;
			padding: .25em;
			border: 1px solid #fff;
			border-radius: 2em;
			color: #fff;
			min-width: 6.5em;
			text-decoration: none;
			transition: all 120ms linear;
			background-color: rgba(255, 255, 255, 0);
			
			&:hover,
			&:focus {
				border-radius: var(--card-radius);
				background-color: var(--color-navlink-bg);
			}
		}
	}
}

#hero,
#navbar,
#footer {
	position: sticky;
	background-image: url('../images/background-pattern.jpg');
	background-size: cover;
	background-attachment: fixed;
	background-position: center;
	color: #fff;

	@media screen and (max-height: 41rem) {
		position: relative;
	}

	&::before {
		content: '';
		position: absolute;
		z-index: 0;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background-color: var(--color-helyo-blue);
		opacity: 1;
		opacity: var(--opacity-hero, 1);
		mix-blend-mode: multiply;
		transition: background-color .23s linear;
	}
	& > * {
		position: relative;
		z-index: 1;
		flex: 0 1 auto;
	}
}

